# tdx

./: .gitignore  LICENSE  README.md  setup-attestation.sh  setup-guest.sh  setup-host.sh  setup-tdx-common  setup-tdx-config  setup-tdx-guest.sh  setup-tdx-host.sh  system-report.sh
.github/: .jira_sync_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
.github/workflows/: cla.yaml  create-snap-action.yml  kobuk-jira.yml  testflinger.yml
attestation/: check-production.sh  check-registration.sh  dump-pckcache.sh  setup-attestation-guest.sh  setup-attestation-host.sh  setup-guest.sh  setup-host.sh
attestation/scripts/: dump-tcb-info  jwt-decode.sh  read-seamldr-svn.sh
gpu-cc/h100/: setup-gpus.sh  setup-tdx-host.sh  vfio-passthrough.rules
guest-tools/: loop_shutdown.sh  regular_vm.xml.template  run_td  run_td.sh  run_td_virsh.sh  td_guest.xml  td_guest.xml.template  td_virsh_tool.sh  tdvirsh  trust_domain-sb.xml.template  trust_domain.xml.template
guest-tools/direct-boot/: README.md  boot_direct.sh  boot_uki.sh
guest-tools/image/: DISCLAIMER.txt  create-td-image.sh  create-td-uki.sh  create-uki.sh  setup.sh
scripts/: enable-kernel-testing.sh  revert-host.sh
tests/: README.md  common.py  pytest.ini  run.sh  run_checkbox  run_pytest  setup_guest.sh  tdtest  test.sh  test_loop.sh  tox.ini
tests/checkbox-provider-tdx/: manage.py
tests/iperf/: README.md  iperf-vsock-3.9
tests/iperf-vsock/: build_iperf_vsock.sh  iperf-vsock-3.9
tests/lib/tdx-tools/: pyproject.toml
tests/lib/tdx-tools/src/tdxtools/: host.py  tdeventlog.py
(+90 files in other folders)
